[package]
name = "rustaveli"
version = "0.1.0"
edition = "2021"
description = "A library to generate random c programs"
license = "MIT"
license-file = "LICENSE" 
repository = "https://github.com/datawater/rustaveli"

[dependencies]
dashmap = "6.1.0"
lazy_static = "1.5.0"
rand = "0.8.5"

[lib]
crate-type = ["staticlib", "lib"]
